# dropbox

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
src/client/: cli.py  http.py  manifest.py  sync.py  watcher.py
src/server/: app.py  auth.py  config.py  routes.py  storage.py  tls.py
tests/: test_auth.py  test_config.py  test_http_client.py  test_integration.py  test_manifest.py  test_routes.py  test_storage.py  test_sync.py  test_watcher.py
