[project]
name = "McAfee-secure"
version = "v0.01"
description = "Your bare metal dropbox"
requires-python = ">= 3.14"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[project.scripts]
server = "src.server.app:run"
client = "src.client.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax for your Python version)
]
fixable = ["ALL"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
